	PR c++/29138 	* decl2.c (grokfield): Don't handle access declarations here. 	* parser.c (cp_parser_using_declaration): Handle access 	declarations too. 	(cp_parser_block_declaration): Adjust calls to 	cp_parser_using_declaration. 	(cp_parser_member_declaration): Likewise.  Use 	cp_parser_using_declaration to look for access_declarations. 	PR c++/29138 	* g++.dg/inherit/access8.C: New test. 	* g++.dg/template/dtor4.C: Tweak error messages.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@117409 138bc75d-0d04-0410-961f-82ee72b054a4